--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="left-side">
                         <div class="profile-info">
                             <img src="assets/images/profile.jpg" alt="">
-                            <h3>Jonney Anderson</h3>
+                            <h3>Yogi Maarif Assegaf</h3>
                             <span>Web Designer</span>
                         </div>
                         <h4 class="ltitle">Contact</h4>
@@ -29,8 +29,8 @@
                                 <i class="fas fa-phone"></i>
                             </div>
                             <div class="detail">
-                                +123 8767 5465 <br>
-                                +122 2345 3763
+                                +03546666 <br>
+                                +03546666
                             </div>
                         </div>
                         <div class="contact-box pb0">
@@ -38,8 +38,8 @@
                                 <i class="fas fa-globe-americas"></i>
                             </div>
                             <div class="detail">
-                                info@smarteyeapps.com <br>
-                                www.smarteyeapps.com
+                                segapishere@gmail.com <br>
+                                www.loginslur.com
                             </div>
                         </div>
                         <div class="contact-box">
@@ -47,7 +47,7 @@
                                 <i class="fas fa-map-marker-alt"></i>
                             </div>
                             <div class="detail">
-                                First Floor,Vincent Plaza, Toranto, Canada
+                                kediri iriririri
                             </div>
                         </div>
                         <h4 class="ltitle">Contact</h4>
