--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </div>
                         <h2 class="rit-titl"><i class="far fa-user"></i> Profile</h2>
                         <div class="about">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan purus enim, a vestibulum est tristique sit amet. Suspendisse nibh nisl, imperdiet sit amet mi vitae, elementum elementum nibh. Vivamus vitae eros malesuada, convallis dolor malesuada, lobortis ex. Sed cursus augue risus, ac semper est consectetur vitae. Praesent consequat metus sit amet rhoncus luctus.</p>
+                            <p>kediri 1 maret 20004, hobi saya belajar, umur saya 16 tahun  .</p>
                             <div class="btn-ro row no-margin">
                                 <ul class="btn-link">
                                     <li>
